Tweaked name of element types and added a legend.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
       <div class="right">
         <input type="text" id="text" maxlength="32" placeholder="Enter a phrase!"/>
       </div>
-
     </div>
-    <div id="output"></div>
+    <div id="body">
+      <div id="output"></div>
+      <div id="legend">
+        <div><div class="alkali square"></div><p>Alkali Metal</p></div>
+        <div><div class="alkaline_earth square"></div><p>Alkaline Earth Metal</p></div>
+        <div><div class="transition square"></div><p>Transition Metal</p></div>
+        <div><div class="lanthanide square"></div><p>Lanthanide</p></div>
+        <div><div class="actinide square"></div><p>Actinide</p></div>
+        <div><div class="post-transition square"></div><p>Post-transition Metal</p></div>
+        <div><div class="metalloid square"></div><p>Metalloid</p></div>
+        <div><div class="reactive_nonmetal square"></div><p>Reactive Nonmetal</p></div>
+        <div><div class="noble_gas square"></div><p>Noble Gas</p></div>
+        <div><div class="unknown square"></div><p>Unknown</p></div>
+        <hr/>
+        <div><div class="fake square"></div><p>Placeholder</p></div>
+      </div>
+    </div>
   </div>
 </body>
