Changed the max length of the input text.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p class="title">Elements</p>
       </div>
       <div class="right">
-        <input type="text" id="text" maxlength="32" placeholder="Enter a phrase!"/>
+        <input type="text" id="text" maxlength="120" placeholder="Type something!"/>
       </div>
     </div>
     <div id="body">
