--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <title>Elements</title>
 </head>
@@ -34,3 +36,4 @@
     </div>
   </div>
 </body>
+</html>
